--- a/_carousel.css
+++ b/_carousel.css
@@ -1,8 +1,14 @@
 /*可控的左右滚动*/
-.bar { width: 423px; height: 18px; }
+.bar {
+	position: absolute;
+	top: 195px;
+	left: 400px;
+	margin-left: -100px;
+	height: 18px; 
+}
 .bar .prev,
 .bar .next {
-	float: right;
+	float: left;
 	width: 18px;
 	height: 18px;
 	display: block;
@@ -14,7 +20,9 @@
 	margin-right: -1px;
 	background-position: -40px 0;
 }
-.bar .next { background-position: -17px 0; }
+.bar .next { 
+	background-position: -17px 0; 
+}
 .bar .prev: hover {
 	text-decoration: none;
 	background-position: 0 0;
@@ -25,7 +33,9 @@
 }
 	
 .page { 
-	float: right; 
+	float: left; 
+	margin-left: 10px;
+	margin-right: 10px; 
 }
 .page a {
 	display: inline-block;
@@ -71,10 +81,10 @@
 	padding: 0;
 	margin: 0;
 	float: left;
-	/*display: inline;  修复IE6双边距BUG 	*/
-	width: 120px;
-	height: 60px;
-	line-height: 60px;
+	/*display: inline;  修复IE6双边距BUG 	*/	
+	width: 800px;
+	height: 210px;
+	line-height: 210px;
 	text-align: center;
 	font-size: 16px;
 	font-weight: bold;
