--- a/css/_carousel.css
+++ b/css/_carousel.css
@@ -76,6 +76,7 @@
 	list-style: none;
 	padding: 0;
 	margin: 0;
+	cursor: move;
 }
 .carousel li {
 	padding: 0;
@@ -87,11 +88,14 @@
 	text-align: center;
 	font-size: 16px;
 	font-weight: bold;
-	border: 1px solid #ccc;
+	/*border: 1px solid #ccc;*/
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
+	z-index: -1;
 }
 .carousel li img{
 	width: 100%;
 	height: 100%;
+	opacity: 1;
+	filter:alpha(opacity=100);
 }
