--- a/css/_carousel.css
+++ b/css/_carousel.css
@@ -89,13 +89,15 @@
 	font-size: 16px;
 	font-weight: bold;
 	/*border: 1px solid #ccc;*/
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	z-index: -1;
+	/*z-index: -1;*/
 }
 .carousel li img{
 	width: 100%;
 	height: 100%;
-	opacity: 1;
-	filter:alpha(opacity=100);
+	-moz-user-select: none;
+  	-webkit-user-select: none;
+  	-ms-user-select: none;
+  	-moz-user-drag: none;
+  	-webkit-user-drag: none;
+  	-ms-user-drag: none;
 }
